# super-voice

./: .gitignore  Cargo.toml  Dockerfile.carrier  Justfile  README.md  active-call.example.toml  active-call.service  env-set.sh  env-unset.sh  install.sh  install.sh.bkp
.planning/: PROJECT.md  (+3 more)
active-call-tester/: Justfile  pyproject.toml
active-call-tester/config/: local-smoke.yaml  test-matrix.yaml
active-call-tester/results/: 20260330_174241-smoke-ws-pcmu-smoke.json  20260330_174306-smoke-sip-opus-smoke.json  20260330_185450-smoke-ws-pcmu-smoke.json  20260330_185515-smoke-sip-opus-smoke.json  20260330_185615-smoke-ws-pcmu-smoke.json  20260330_200955-smoke-ws-pcmu-smoke.json  20260330_201020-smoke-sip-opus-smoke.json  20260330_203412-smoke-ws-pcmu-smoke.json  20260330_203432-smoke-sip-opus-smoke.json  20260330_204232-smoke-ws-pcmu-smoke.json  20260330_210352-smoke-ws-pcmu-smoke.json  20260330_210417-smoke-sip-opus-smoke.json  20260330_210757-smoke-ws-pcmu-smoke.json  20260330_210822-smoke-sip-opus-smoke.json
active-call-tester/src/active_call_tester/: cli.py  config.py  models.py  runner.py
active-call-tester/src/active_call_tester/clients/: base.py  rest.py  sip.py  webrtc.py  ws.py
active-call-tester/tests/: test_config.py  test_console.py  test_exporters.py  test_metrics.py  test_models.py  test_rest_client.py  test_runner.py  test_sip_client.py  test_webrtc_client.py  test_ws_client.py
crates/pjsip/: Cargo.toml
crates/pjsip/src/: bridge.rs  command.rs  endpoint.rs  error.rs  event.rs  lib.rs  pool.rs  session.rs
crates/pjsip/tests/: outbound_invite.rs  smoke.rs
crates/sofia-sip/: Cargo.toml
crates/sofia-sip/src/: agent.rs  bridge.rs  command.rs  event.rs  handle.rs  lib.rs  root.rs
crates/sofia-sip/tests/: smoke.rs
(+224 files in other folders)
