# crates/pjsip/Cargo.toml
[package]
name = "pjsip"
version = "0.1.0"
edition = "2024"
description = "Safe Rust wrapper for pjproject SIP library"
license = "MIT"

[dependencies]
pjsip-sys = { path = "../pjsip-sys" }
libc = "0.2"
anyhow = "1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tracing = "0.1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
